--- a/manifests/dataset/values.yaml
+++ b/manifests/dataset/values.yaml
@@ -64,10 +64,10 @@ controller:
   image:
     registry: ''
     repository: baizeai/dataset-controller
-    tag:
+    tag: latest
 
 dataloader:
   image:
     registry: ''
     repository: baizeai/dataset-data-loader
-    tag:
+    tag: latest
