Set default dataSyncRound and CEL check

--- a/config/crd/bases/dataset.baizeai.io_datasets.yaml
+++ b/config/crd/bases/dataset.baizeai.io_datasets.yaml
@@ -52,13 +52,14 @@ spec:
             description: DatasetSpec defines the desired state of Dataset
             properties:
               dataSyncRound:
+                default: 1
                 description: dataSyncRound is the number of data sync rounds to be
                   performed."
                 format: int32
                 type: integer
                 x-kubernetes-validations:
                 - message: dataSyncRound can only be incremented by 1
-                  rule: self - oldSelf <= 1
+                  rule: self > 0 && self - oldSelf <= 1
               mountOptions:
                 description: mountOptions is the options for mounting the dataset.
                 properties:
@@ -551,18 +552,15 @@ spec:
                                 persistent volume is being resized.
                               type: string
                             status:
+                              description: |-
+                                Status is the status of the condition.
+                                Can be True, False, Unknown.
+                                More info: https://kubernetes.io/docs/reference/kubernetes-api/config-and-storage-resources/persistent-volume-claim-v1/#:~:text=state%20of%20pvc-,conditions.status,-(string)%2C%20required
                               type: string
                             type:
                               description: |-
-                                PersistentVolumeClaimConditionType defines the condition of PV claim.
-                                Valid values are:
-                                  - "Resizing", "FileSystemResizePending"
-
-                                If RecoverVolumeExpansionFailure feature gate is enabled, then following additional values can be expected:
-                                  - "ControllerResizeError", "NodeResizeError"
-
-                                If VolumeAttributesClass feature gate is enabled, then following additional values can be expected:
-                                  - "ModifyVolumeError", "ModifyingVolume"
+                                Type is the type of the condition.
+                                More info: https://kubernetes.io/docs/reference/kubernetes-api/config-and-storage-resources/persistent-volume-claim-v1/#:~:text=set%20to%20%27ResizeStarted%27.-,PersistentVolumeClaimCondition,-contains%20details%20about
                               type: string
                           required:
                           - status
